--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <footer>
             <p>&copy; 2023 MCafe. All rights reserved.
-                تم تطويرة بواسطة محمود المسلمي و محمود العربي
+                تم تطويرة بواسطة محمود المسلمي و محمود العربي و محمد نبيل
             </p>
         </footer>
     
