--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
             
             <div class="contact-info">
                 <h3>Contact Information</h3>
-                <p><i class="fas fa-phone"></i>+01 287061183</p>
+                <p><i class="fas fa-phone"></i>+201113345118</p>
                 <p><i class="fas fa-envelope"></i>MCafe@contact.com</p>
                 <p><i class="fas fa-map-marker-alt"></i> 123 Street, Zag,Sharqiua</p>
             </div>
