--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="icons">
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://wa.link/5rvhob"><i class="fa-brands fa-whatsapp"></i></a>
     </section>
 
             <section class="cards" id="serices">
