--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <h3>Explore Our Menu Now..</h3>
             <a href="./menu.html" class="main-btn">View our Menu</a>
             <div class="icons">
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.instagram.com/mohamed.solimannn?igsh=MWc5eHE1dzRwZjFpcQ%3D%3D&utm_source=qr"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/mohamed.solimannn?igsh=MWc5eHE1dzRwZjFpcQ%3D%3D&utm_source=qr"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/MSoliman12?mibextid=LQQJ4d"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://wa.link/5rvhob"><i class="fa-brands fa-whatsapp"></i></a>
     </section>
 
